fix: text align of payment on mobile resolution

--- a/src/components/payment-methods/PaymentMethodsSection.scss
+++ b/src/components/payment-methods/PaymentMethodsSection.scss
@@ -169,12 +169,14 @@
           line-height: normal;
           font-weight: $font-weight-regular;
           padding: 8px;
+          text-align: end;
 
           &:last-child {
             border-bottom: none;
           }
 
           strong {
+            text-align: start;
             background: $text-color-fourth;
             background-clip: text;
             -webkit-background-clip: text;
@@ -195,6 +197,10 @@
   }
 }
 
-.payment-methods-section .mobile-payment-methods .payment-method-card .payment-method-details p {
+.payment-methods-section
+  .mobile-payment-methods
+  .payment-method-card
+  .payment-method-details
+  p {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
